# kb

./: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  keyboard.toml  vial.json
.cargo/: config.toml
src/: central.rs  keymap.rs  light.rs  macros.rs  peripheral.rs
