[package]
name = "kb"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { git = "https://github.com/sebastos1/rmk", rev = "86bcc8b95ef55e8b513c94cac375edaf35368844", features = ["split", "rp2040", "display"] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-rp = { version = "0.10", features = [
    "rp2040",
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "0.1", features = ["defmt"] }
cortex-m-rt = "0.7.5"
portable-atomic = { version = "1.11", features = ["critical-section"] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
